# forward-kinematics

./: .gitmodules  CMakeLists.txt  README.md  TASK.txt
src/: array.h  character.h  controller.cpp  database.h  forward_kinematica.h  quat.h  spring.h  vec.h
